<resources>
    <string name="app_name">TeamDVM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

    <!--Strings related to login -->
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">New User? <u>Register Now</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="title_activity_creator_landing_page">CreatorLandingPage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--string name="default_web_client_id">270464788381-lffd9gjl88ejl6pc0nmka4jvfesg5bdb.apps.googleusercontent.com</string-->


</resources>